# expenses-app-flask

./: .env_example  Makefile  README.md  database.sql  docker-compose.db.yml  docker-compose.yml  pyproject.toml
.github/workflows/: lint-test.yml
expenses_app/: TODO.md  __init__.py  app.py  controllers.py  crud.py  db_connect.py  models.py  settings.py  views.py
expenses_app/templates/: add_new_expense_form.html  base.html  categories.html  currencies.html  expenses.html
expenses_app/templates/blocks/: navigation.html
expenses_app/templates/forms/: add_new_category.html  add_new_currency.html  add_new_expense.html
